4.2
 * Add guardrail to allow disabling of SimpleStrategy (CASSANDRA-17647)
 * Change default directory permission to 750 in packaging (CASSANDRA-17470)
 * Adding support for TLS client authentication for internode communication (CASSANDRA-17513)
 * Add new CQL function maxWritetime (CASSANDRA-17425)
 * Add guardrail for ALTER TABLE ADD / DROP / REMOVE column operations (CASSANDRA-17495)
 * Rename DisableFlag class to EnableFlag on guardrails (CASSANDRA-17544)
Merged from 4.1:
 * Handle config parameters upper bound on startup; Fix auto_snapshot_ttl and paxos_purge_grace_period min unit validations (CASSANDRA-17571)
 * Fix leak of non-standard Java types in our Exceptions as clients using JMX are unable to handle them.
   Remove useless validation that leads to unnecessary additional read of cassandra.yaml on startup (CASSANDRA-17638)
 * Fix repair_request_timeout_in_ms and remove paxos_auto_repair_threshold_mb (CASSANDRA-17557)
 * Incremental repair leaks SomeRepairFailedException after switch away from flatMap (CASSANDRA-17620)
 * StorageService read threshold get methods throw NullPointerException due to not handling null configs (CASSANDRA-17593)
Merged from 4.0:
Merged from 3.11:
Merged from 3.0:


4.1
 * Rename truncate_drop guardrail to drop_truncate_table (CASSANDRA-17592)
 * nodetool enablefullquerylog can NPE when directory has no files (CASSANDRA-17595)
 * Add auto_snapshot_ttl configuration (CASSANDRA-16790)
 * List snapshots of dropped tables (CASSANDRA-16843)
 * Add information whether sstables are dropped to SchemaChangeListener (CASSANDRA-17582)
 * Add a pluggable memtable API (CEP-11 / CASSANDRA-17034)
 * Save sstable id as string in activity table (CASSANDRA-17585)
 * Implement startup check to prevent Cassandra to potentially spread zombie data (CASSANDRA-17180)
 * Allow failing startup on duplicate config keys (CASSANDRA-17379)
 * Migrate threshold for minimum keyspace replication factor to guardrails (CASSANDRA-17212)